Add conda environment

--- a/SI-practical-01.ipynb
+++ b/SI-practical-01.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1fb5c95b",
+   "id": "fad7d908",
    "metadata": {},
    "source": [
     "# Contents\n",
-    "This tutorial is dedicated to the analysis of sea-ice concetration data from space. In the following you will learn how to:\n",
+    "This tutorial is dedicated to the analysis of sea-ice concentration data from space. In the following you will learn how to:\n",
     "* _compute climatologies from NetCDF data_\n",
     "* _visualize maps of sea-ice concentration_\n",
     "* _compute sea-ice extent and display its seasonal cycle_\n",
@@ -15,15 +15,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c29ebdc",
-   "metadata": {},
+   "id": "14f879aa",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Sea ice concentration dataset from satellite passive microwave\n",
     "There are several products with satellite-derived sea ice concentration. They vary in the type of sensor on the satellite payload and the algorithm used to process the data. \n",
     "\n",
     "We will use one of the first product from NASA, based on the NASA Team (NT) algorithm and data from a variety of sensors on multiple satellites. This product has been freely available since 1996 and it is fully described here: https://nsidc.org/data/nsidc-0051 \n",
     "\n",
-    "When using the data, remember to make reference with the proper citation:\n",
+    "When using the data, remember to refer to the proper citation (found on the data website):\n",
     "\n",
     ">*Cavalieri, D. J., C. L. Parkinson, P. Gloersen, and H. J. Zwally. 1996, updated yearly. Sea Ice Concentrations from Nimbus-7 SMMR and DMSP SSM/I-SSMIS Passive Microwave Data, Version 1. Boulder, Colorado USA. NASA National Snow and Ice Data Center Distributed Active Archive Center. doi: https://doi.org/10.5067/8GQ8LZQVL0VL.*\n",
     "\n",
@@ -41,8 +43,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ccb47ad",
-   "metadata": {},
+   "id": "874a1fec",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## How to process NetCDF data (theory)\n",
     "\n",
@@ -54,13 +58,21 @@
     "that required specialized \"data containers\". Gridded data are distributed using the [NetCDF format](https://www.unidata.ucar.edu/software/netcdf/). Most of the scientific visualization software implement dedicated libraries to load and work with this format. [xarray](http://xarray.pydata.org/en/stable/) is the python library that we will use in this tutorial.\n",
     "However, performing multiple batch operations such concatenation and averaging is a lenghty process that is better suited for dedicated software. [cdo](https://code.mpimet.mpg.de/projects/cdo) and [nco](https://code.mpimet.mpg.de/projects/cdo) are two of these tools. They are better suited for the linux environment, but can also be run from mac OS and windows.\n",
     "\n",
-    "To learn more about `cdo`, follow the [cdo Tutorial](https://code.mpimet.mpg.de/projects/cdo/wiki/Tutorial).\n",
-    "\n",
+    "To learn more about `cdo`, follow the [cdo Tutorial](https://code.mpimet.mpg.de/projects/cdo/wiki/Tutorial)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b023294",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "### Time averages and climatologies\n",
     "\n",
     "The majority of publicly available gridded data are provided in separate files, each one containing a given number of records (3-hourly, daily, monthly, etc). \n",
-    "The number of records is included in the record dimension, which is described by a corresponding variable, called a coordinate variable. There is no specific convention for names, but it is customary to use the same name for the record dimension and for the coordinate variable.\n",
-    "In the following example, <code style=\"color:#008000\">time</code> is the name of the record dimension and of the coordinate variable. It should be interpreted as \"the variable `time` has dimension <code style=\"color:#008000\">time</code> and contains 12 records\". \n",
+    "The number of records is included in the *record dimensionP, which is described by a corresponding variable, called a coordinate variable. There is no specific convention for names, but it is customary to use the same name for the record dimension and for the coordinate variable.\n",
+    "In the following example, <code style=\"color:#008000\">time</code> is the name of the record dimension and of the coordinate variable. It should be interpreted as \"the variable `time` has dimension <code style=\"color:#008000\">time</code> and contains 12 records\". We recognize that it is a record dimension by the attribute `UNLIMITED`:\n",
     "```sh\n",
     "dimensions:\n",
     "\ttime = UNLIMITED ; // (12 currently)\n",
@@ -72,12 +84,19 @@
     "\t\ttime:calendar = \"gregorian\" ;\n",
     "\t\ttime:axis = \"T\" ;\n",
     "```\n",
-    "The value contained in a given record (or index) of the variable `time` identifies the time stamp that follows a convention. The attributes units and calendar are used to identify the convention and needs to be preserved to ensure that the metadata are consistent with the content.\n",
-    "\n",
-    "\n",
+    "The value contained in a given record (or index) of the variable `time` identifies the time stamp that follows a convention. The attributes `units` and `calendar` are used to identify the convention and needs to be preserved to ensure that the metadata are consistent with the content."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ba72b2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "### Temporal concatenation of gridded files\n",
     "\n",
-    "A climatology is the average of records over a certain time period (in climate sciences, one needs at least 30 years to define a climatology, however the term is used in a more general sense). There are different types of climatologies; the most often used are the following:\n",
+    "A **climatology** is the average of records over a certain time period (in climate sciences, one needs at least 30 years to define a climatology. However, this term is often used in a more general sense). There are different types of climatologies; the most often used are the following:\n",
     "- annual (overall) long-term mean. This is the average of all the records in the dataset\n",
     "- monthly or seasonal climatological means. The records are grouped according to the months or the seasons and then averaged over the years in the data set. Seasons are usually calendar seasons (DJF, MAM, JJA, SON), but it may vary depending on the context, so it is always important to specify the choice. Because the number of days in each month or season are (almost...) fixed, there is no difference if you first compute the monthly means and then the climatology for each month by averaging them over the years.\n",
     "- daily climatological means. \n",
@@ -94,14 +113,23 @@
     "cdo -mergetime {filelist} concatenated_output.nc\n",
     "```\n",
     "`{filelist}` can be a list of files or a filename with wildcards, like `*.nc`. \n",
-    "This operation is however possible only if your time dimension is UNLIMITED, which means it is defined as a NetCDF record dimension. \n",
-    "Your file may still have a time dimension but not necessarily an expandable record dimension. This is often the case with remote sensing products or other data sets.\n",
-    "In order to concatenate along the record dimension you first need to create a time dimension that is expandable, which means it needs to have the `UNLIMITED` flag. This cannot be done with `cdo`, and you need to use `nco` the other Swiss knife of NetCDF operations, and more specifically the tool `ncks` (netcdf \"kitchen sink\"). The rationale is to convert the time dimension to a record dimension only in the first file, and then to concatenate all the other files to this new one.\n",
+    "This operation is however possible only if your time dimension is `UNLIMITED`, which means it is defined as a NetCDF record dimension. \n",
+    "Your file may still have a time dimension but not necessarily an *expandable* record dimension. This is often the case with remote sensing products or other data sets.\n",
+    "In order to concatenate along the record dimension you first need to create a time dimension that is expandable, which means it needs to have the `UNLIMITED` flag. This cannot be done with `cdo`, and you need to use `nco` the other Swiss Army knife of NetCDF operations, and more specifically the tool `ncks` (netcdf \"kitchen sink\"). The rationale is to convert the time dimension to a record dimension for the first file, and then to concatenate all the other files to this new one.\n",
     "```sh\n",
     "ncks -O --mk_rec_dmn {time_dimension_name} first_in.nc first_out.nc\n",
     "ncrcat -h first_out.nc {other_files} concatenated_output.nc\n",
     "```\n",
-    "\n",
+    "`ncrcat` is a tool for record concatenation (equivalent to `mergetime` in `cdo`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b81ea7a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "### Computing monthly means and climatologies\n",
     "\n",
     "Let's assume our file `concatenated_output.nc` contains a time series of sea-ice concentration daily data from 1979 to 2019, in a file called `seaice_conc_daily_sh_1978_2019.nc`. It is imperative to give sensible names to your files. Remember that `cdo` will record your operation in the history attribute, but it will not change units or names of the variables. This is an important postprocessing operation that you should always remember to do to preserve the metadata.\n",
@@ -126,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e793b16-e2cc-4e7f-8297-04afcf0ee820",
+   "id": "15b45111",
    "metadata": {},
    "source": [
     "## Required python modules\n",
@@ -135,12 +163,29 @@
     "- cartopy (to project geographical data)\n",
     "- cmocean (to use appropriate color maps)\n",
     "\n",
-    "Install them using the"
+    "Install them before running the code below. The commands will depend on your specific environment.\n",
+    "\n",
+    "## Usage with Conda (minimal environment)\n",
+    "Install miniconda3 (Python 3.7) for your platform from https://docs.conda.io/en/latest/miniconda.html\n",
+    "\n",
+    "From a command line or terminal window, install the required environment (~ 260 MB) with the following command:\n",
+    "\n",
+    "`conda env create -f environment.yml`\n",
+    "\n",
+    "you should now see that the dependencies were installed and our environment is ready to be used. (you may consider to use `mamba` if it takes too long_\n",
+    "\n",
+    "Activate the environment with `conda activate si-practical`\n",
+    "\n",
+    "Launch the notebook locally with the following command:\n",
+    "\n",
+    "`jupyter lab`\n",
+    "\n",
+    "This should open a browser window displaying your current working directory contents. Navigate to the notebooks folder and click on this notebook. You can now interact with the notebook to explore and access data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b2cb1e5",
+   "id": "fe5839fc",
    "metadata": {},
    "source": [
     "## Analysis of monthly climatological sea-ice concentration data"
@@ -149,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e617a9b",
+   "id": "8097dd29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f117e87",
+   "id": "2d75f765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eae8c23",
+   "id": "1b116286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a585ff0",
+   "id": "c480d229",
    "metadata": {},
    "source": [
     "Good practice is to always check the metadata, to find out the names of the variables and other information:"
@@ -195,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3107304",
+   "id": "4d155511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c38763",
+   "id": "69661234",
    "metadata": {},
    "source": [
     "From the history, we can find out the post-processing done on the data. GDAL is a translator library for raster and vector geospatial data formats, which has been used to transform the data from the original stereographic polar coordinate reference system (CRS) to a geographical CRS.\n",
@@ -215,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44122794",
+   "id": "d0295d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c88661f",
+   "id": "bd12e0a4",
    "metadata": {},
    "source": [
     "We notice that some values are larger than the maximum expected percentage (100%). It is not written anywhere in the metadata, but in the documentation you will find that \n",
@@ -243,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dae458",
+   "id": "b8c37703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf767389",
+   "id": "e424f45b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b57a170",
+   "id": "14a8559f",
    "metadata": {},
    "source": [
     "## Climatological maps\n",
@@ -273,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1efbed",
+   "id": "8c764a4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b508f11e",
+   "id": "ff5eb24f",
    "metadata": {},
    "source": [
     "## Seasonal cycle of sea ice extent\n",
@@ -320,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad53ee4",
+   "id": "f3aafe3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1e9fed",
+   "id": "f921ec2d",
    "metadata": {},
    "source": [
     "which is a 3D array with dimensions time, latitude and longitude. The SIE is computed by first creating an array of sea-ice presence/absence, discretizing the concentration values according to the thresholds. Let's have a quick look at the resulting first time record (January)"
@@ -340,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84539b9",
+   "id": "983cb21e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7413a3b",
+   "id": "d38d9341",
    "metadata": {},
    "source": [
     ">*Notice that the cartesian representation of a matrix is upside down!*\n",
@@ -367,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa18b572",
+   "id": "d662f79a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748cd4b2",
+   "id": "ab8f295a",
    "metadata": {},
    "source": [
     "The cells are regular in the geographic CRS, 0.25 x 0.25 degrees. However, the length in km of one degree latitude is constant, while the length of one degree longitude depends on the latitude. The following code compute the area as an array with the same dimension as the input data. This array will be used to compute the total area."
@@ -388,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a4ac5e",
+   "id": "a0d940bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bcc8611",
+   "id": "11684568",
    "metadata": {},
    "source": [
     "The SIE is the sum of all the cell areas. Note how convenient `numpy` is in broadcasting the array for an efficient computation. `sip` and `area` have different shapes, but the software understands how to broadcast a 2D array into a 3D array"
@@ -408,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6284524",
+   "id": "4891c50f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86556327",
+   "id": "82851071",
    "metadata": {},
    "source": [
     "The result is an array with 12 values. Note how the sum is done on the spatial dimensions (the 2nd and 3rd). We can now plot the monthly timeseries. *Note that we tile the same array twice to see the full seasonal cycle and the transitional periods between winter and summer*"
@@ -427,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5a6b47",
+   "id": "a1c23dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8c7b42",
+   "id": "2d29ce96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ee11dc",
+   "id": "68f7998d",
    "metadata": {},
    "source": [
     "### Regional SIE\n",
@@ -462,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05abafa2",
+   "id": "e01c0f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8305c446",
+   "id": "de7f28b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a06a01",
+   "id": "a1cda3e3",
    "metadata": {},
    "source": [
     "We notice the different seasonal cycles, which highlight contrasting regions in Antarctic sea ice. All cycles are asymmetric, but the major difference is observed in the Atlantic sector, between the eastern and western Weddell Sea."
@@ -519,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce77e94f",
+   "id": "4a1197e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -541,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
